@@ -54,12 +54,6 @@ src_install() {
 		fowners root:portage /var/lib/gentoo/news
 		fperms g+w /var/lib/gentoo/news
 	fi
-
-	# band aid for prefix
-	if use prefix; then
-		cd "${ED}"/usr/share/eselect/libs || die
-		sed -i "s:ALTERNATIVESDIR_ROOTLESS=\"${EPREFIX}:ALTERNATIVESDIR_ROOTLESS=\":" alternatives.bash || die
-	fi
 }
 
 pkg_postinst() {
