@@ -2,6 +2,14 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-admin/eselect/ChangeLog,v 1.179 2011/01/22 21:38:52 ulm Exp $
 
+*eselect-1.4.4-r103 (22 Jul 2015)
+
+  22 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
+  +eselect-1.4.4-r103.ebuild, -eselect-1.4.4-r102.ebuild, eselect-9999.ebuild,
+  files/eselect-1.4.4-alternatives.patch:
+  Update eslect support for prefix. The current set up was badly broken with
+  multiple double prefix and other oddities.
+
 *eselect-1.4.4-r102 (06 Jun 2015)
 
   06 Jun 2015; Justin Lecher <jlec@gentoo.org> +eselect-1.4.4-r102.ebuild,
